@@ -156,6 +156,7 @@ Version 1.6.current:
     * fixed backtrace when user removed css_url entry from user_form_fields
     * Fixed the output of macro and "attachment:" usages of the rst parser.
     * Removed Twisted request object reverse DNS lookup
+    * cfg.editor_quickhelp was not parsed with the wiki parser when customized
 
   Other changes:
     * we use (again) the same browser compatibility check as FCKeditor uses
